[package]
name = "modeldeploy"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for ModelDeploy C++ inference SDK"
license = "MIT"

[lib]
name = "modeldeploy"

[dependencies]
thiserror = "2"
libc = "0.2"

[dev-dependencies]
anyhow = "1"

[[example]]
name = "detection"
path = "examples/detection.rs"
required-features = []
