[package]
name = "modeldeploy"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for ModelDeploy C++ inference SDK"
license = "MIT"

[lib]
name = "modeldeploy"

[dependencies]
thiserror = "2"
libc = "0.2"

[dev-dependencies]
anyhow = "1"

[[example]]
name = "detection"
path = "examples/detection.rs"

[[example]]
name = "classification"
path = "examples/classification.rs"

[[example]]
name = "face_detection"
path = "examples/face_detection.rs"

[[example]]
name = "obb"
path = "examples/obb.rs"

[[example]]
name = "seg"
path = "examples/seg.rs"

[[example]]
name = "pose"
path = "examples/pose.rs"

[[example]]
name = "face_age"
path = "examples/face_age.rs"

[[example]]
name = "face_gender"
path = "examples/face_gender.rs"

[[example]]
name = "face_rec"
path = "examples/face_rec.rs"
